# adventofcode-2024

./: .gitignore  Cargo.toml
c/day-04/: part1.c  part1.h  testPart1.c
rust/: Cargo.toml
