[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1"
path = "src/bin/day-01/part1.rs"

[[bin]]
name = "day2"
path = "src/bin/day-02/part1.rs"

[[bin]]
ame = "day3"
path = "src/bin/day-03/part1.rs"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rstest = "0.18.2"
